<resources>
    <string name="app_name">Môj slovník</string>
    <string name="add_expression">Pridať výraz</string>
    <string name="app_title">Angličtina</string>
    <string name="vocabulary">Slovník</string>
    <string name="start_test">Spustiť test</string>
    <string name="build_vocabulary">Budejeme slovnú zásobu</string>
    <string name="expression_hint">Fráza po anglicky</string>
    <string name="translation_hint">Preklad</string>
    <string name="add_btn">Pridať</string>
    <string name="plus_txt">+</string>
    <string name="category_list">Zoznam kategórií</string>
    <string name="category">Kategória</string>
    <string name="import_data">Importovať údaje</string>
    <string name="export_data">Exportovať údaje</string>
    <string name="dialogTitle">Testovať sa z</string>
    <string name="confirm">Potvrdiť</string>
    <string name="cancel">Zrušiť</string>
    <string name="english">Angličtina</string>
    <string name="slovak">Slovenčina</string>
    <string name="add_category">Pridať kategóriu</string>
    <string name="category_hint">Kategória po anglicky</string>
    <string name="category_translation_hint">Kategória v slovenčine</string>
    <string name="category_added">Kategória pridaná</string>
    <string name="expression_added">Výraz pridaný</string>
    <string name="your_answer">Vaša odpoveď: </string>
    <string name="ok">OK</string>
    <string name="right">Správne !</string>
    <string name="wrong">Nesprávne !</string>
    <string name="test_results">Výsledky testu</string>
    <string name="question_number">Otázka č.</string>
    <string name="progress">" / 10"</string>
    <string name="right_answer">Správna odpoveď: </string>
    <string name="again">Opakovať</string>
</resources>