<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_expression_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/add_expression_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30sp"
        android:text="@string/add_expression"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/english_expression_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_expression_txt"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30sp"
        android:hint="@string/expression_hint"
        android:inputType="text"
        android:minWidth="250sp" />

    <EditText
        android:id="@+id/translation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/english_expression_txt"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30sp"
        android:hint="@string/translation_hint"
        android:inputType="text"
        android:minWidth="250sp" />

    <LinearLayout
        android:id="@+id/dropdown_with_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translation_txt"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:drawable/btn_dropdown"
            android:minWidth="250sp"

            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_category_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/category"
            android:text="@string/plus_txt"

            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropdown_with_plus"
        android:layout_centerInParent="true"
        android:minWidth="100sp"
        android:text="@string/add_btn" />


</RelativeLayout>

