<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_expression_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".TestResults">

    <TextView
        android:id="@+id/test_results_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30sp"
        android:text="@string/test_results"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/test_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_test_result_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="goMainScreen"/>

        <Space
            android:layout_width="100sp"
            android:layout_height="1sp"></Space>

        <Button
            android:id="@+id/confirm_test_result_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:onClick="goAgain"/>
    </LinearLayout>

</LinearLayout>

