<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/teal_200"
    >

    <RelativeLayout
        android:id="@+id/results_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_number"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/answer_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Fraza"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/answers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results_item_header"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/your_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_number"
            android:text="@string/your_answer"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/right_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/your_answer"
            android:text="@string/right_answer"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </LinearLayout>



</RelativeLayout>